Update: implemented authentication using internet passport

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="icon" href="/favicon.ico" />
     <script async src="https://kit.fontawesome.com/fa9773d278.js" crossorigin="anonymous"></script>
-    <script defer src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script defer src="https://code.jquery.com/jquery-3.6.4.min.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
