--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,6 +15,11 @@ body {
   width: 1.5em;
   height: 1.5em;
 }
+
+.logo-md {
+  width: 3em;
+  height: 3em;
+}
 /* logo */
 
 /* banner */
@@ -106,7 +111,7 @@ body {
 
 /* btn */
 .btn-full {
-  background-color: #f50057;
+  background-color: #3c40c6;
   color: #ffffff;
 }
 
@@ -114,6 +119,16 @@ body {
   color: #ffffff;
 }
 /* btn */
+
+/* app-card */
+.app-card {
+  padding: 2rem 3rem;
+}
+
+.app-shadow {
+  box-shadow: 0px 1px 0.2rem #888888;
+}
+/* app-card */
 
 @media screen and (max-width: 991px) {
   .banner {
@@ -158,5 +173,11 @@ body {
   .features-section .row > div {
     text-align: center;
     margin-bottom: 1.75rem;
+  }
+}
+
+@media screen and (max-width: 595px) {
+  .app-card {
+    padding: 1rem 1.5rem;
   }
 }
