--- a/public/css/main.css
+++ b/public/css/main.css
@@ -89,7 +89,7 @@ body {
 
 .wrapper-md {
   width: 100%;
-  min-height: 86.2vh;
+  min-height: 86.55vh;
 }
 /* wrapper */
 
@@ -125,8 +125,18 @@ body {
   padding: 2rem 3rem;
 }
 
+.app-card-btn,
 .app-shadow {
   box-shadow: 0px 1px 0.2rem #888888;
+  border: 0;
+}
+
+.app-card-btn {
+  transition: 0.3s ease-in;
+}
+
+.app-card-btn:hover {
+  background-color: #f7f7f7;
 }
 /* app-card */
 
