--- a/public/css/main.css
+++ b/public/css/main.css
@@ -133,6 +133,7 @@ body {
 
 .app-card-btn {
   transition: 0.3s ease-in;
+  cursor: pointer;
 }
 
 .app-card-btn:hover {
@@ -140,6 +141,11 @@ body {
 }
 /* app-card */
 
+/* rounded-modal */
+.rounded-modal .modal-content {
+  border-radius: 10px;
+}
+/* rounded-modal */
 @media screen and (max-width: 991px) {
   .banner {
     padding: 5rem;
