--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -2,6 +2,7 @@
     <a class="navbar-brand" href="/">
         <div class="d-flex align-tems-center">
             <img src="/imgs/logo.png" alt="Logo" class="logo mr-1" />
+            <h5 class="m-0 text-white font-weight-bold">Todoist</h5>
         </div>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -9,10 +10,6 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <div class="ml-auto">
-            <h5 class="m-0 text-white font-weight-bold">Todoist</h5>
-        </div>
-
         <ul class="navbar-nav ml-auto">
             <li class="nav-item {{#if (eq path '/')}}active{{/if}}">
                 <a class="nav-link" href="/">
@@ -26,12 +23,21 @@
                     {{#if (eq path '/#features')}}<span class="sr-only">(current)</span>{{/if}}
                 </a>
             </li>
+            {{#if isLoggedIn}}
+            <li class="nav-item {{#if (eq path '/dashboard')}}active{{/if}}">
+                <a class="nav-link" href="/dashboard">
+                    Dashboard
+                    {{#if (eq path '/dashboard')}}<span class="sr-only">(current)</span>{{/if}}
+                </a>
+            </li>
+            {{else}}
             <li class="nav-item {{#if (eq path '/login')}}active{{/if}}">
                 <a class="nav-link" href="/login">
                     Login
                     {{#if (eq path '/login')}}<span class="sr-only">(current)</span>{{/if}}
                 </a>
             </li>
+            {{/if}}
         </ul>
 
         {{#if isLoggedIn}}
