--- a/views/todos/dashboard.hbs
+++ b/views/todos/dashboard.hbs
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-12 col-sm-6 col-md-4 mb-3">
                 <a role="button" class="card rounded-card app-card app-card-btn" data-toggle="modal"
-                    data-target="#createAppForm">
+                    data-target="#todoFormModal">
                     <div class="card-body d-flex align-items-center justify-content-center">
                         <div class="text-center">
                             <p><i class="fas fa-plus"></i></p>
@@ -21,3 +21,34 @@
     </div>
 </div>
 {{>footer}}
+
+
+{{!-- New Todo --}}
+<div class="modal fade" id="todoFormModal">
+    <div class="modal-dialog rounded-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">
+                    New Todo
+                </h5>
+                <a href="javascript: void(0)" class="close" data-dismiss="modal">
+                    &times;
+                </a>
+            </div>
+            <div class="modal-body">
+                <form action="" method="post">
+                    <div class="mb-3">
+                        <input type="text" maxlength="150" name="title" class="form-control" placeholder="Title">
+                    </div>
+
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-full">
+                            Create Todo
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+{{!-- New Todo --}}
