--- a/views/todos/dashboard.hbs
+++ b/views/todos/dashboard.hbs
@@ -4,7 +4,9 @@
         <div class="mb-3">
             <h5 class="title-text">Todos</h5>
         </div>
-
+        <div class="text-center">
+            {{> flashMessage}}
+        </div>
         <div class="row">
             <div class="col-12 col-sm-6 col-md-4 mb-3">
                 <a role="button" class="card rounded-card app-card app-card-btn" data-toggle="modal"
@@ -17,6 +19,25 @@
                     </div>
                 </a>
             </div>
+
+            {{#each todos as |todo|}}
+            <div class="col-12 col-sm-6 col-md-4 mb-3">
+                <a href="/todos/{{todo.id}}" role="button" class="card rounded-card app-card app-card-btn">
+                    <div class="card-body d-flex flex-column justify-content-between">
+                        <div>
+                            <h5>{{todo.title}}</h5>
+                            <p class="text-muted small">{{dateFormat todo.createdAt "MMMM Do YYYY"}}</p>
+                        </div>
+
+                        <div class="text-muted d-flex justify-content-between">
+                            <i class="fas fa-tasks"></i>
+
+                            <span>{{todo.totalDone}}/{{todo.total}}</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            {{/each}}
         </div>
     </div>
 </div>
@@ -24,7 +45,7 @@
 
 
 {{!-- New Todo --}}
-<div class="modal fade" id="todoFormModal">
+<div class="modal fade" id="todoFormModal" data-backdrop="static">
     <div class="modal-dialog rounded-modal">
         <div class="modal-content">
             <div class="modal-header">
@@ -36,9 +57,19 @@
                 </a>
             </div>
             <div class="modal-body">
-                <form action="" method="post">
+                <form action="/todos" method="post">
                     <div class="mb-3">
-                        <input type="text" maxlength="150" name="title" class="form-control" placeholder="Title">
+                        <input type="text" maxlength="50" name="title" class="form-control wordCount"
+                            placeholder="Title">
+                    </div>
+
+                    <div id="taskList"></div>
+
+                    <div class="mb-3">
+                        <button type="button" class="btn btn-sm btn-light" id="addTask">
+                            <i class="fas fa-plus"></i>
+                            Task
+                        </button>
                     </div>
 
                     <div class="text-center">
@@ -52,3 +83,5 @@
     </div>
 </div>
 {{!-- New Todo --}}
+
+<script defer src="/js/dashboard.js"></script>
