--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,10 +1,12 @@
 {{!-- {{>navbar}} --}}
 <div class="container">
     <div class="wrapper-md d-flex justify-content-center align-items-center">
-        <div class="card rounded-card app-card app-shadow">
+        <div class="card rounded-card app-shadow login-card">
             <div class="card-body">
-                <div class="text-center">
-                    <img src="/imgs/logo.png" alt="app logo" class="logo-md mb-3">
+                <div class="text-center mb-3">
+                    <a href="/">
+                        <img src="/imgs/logo.png" alt="app logo" class="logo-md mb-3">
+                    </a>
                 </div>
                 <div class="mb-4">
                     <h5 class="mb-1">Login and get organized</h5>
