--- a/views/todos/dashboard.hbs
+++ b/views/todos/dashboard.hbs
@@ -63,7 +63,9 @@
                             placeholder="Title">
                     </div>
 
-                    <div id="taskList"></div>
+                    <input type="hidden" name="items">
+                    <div id="taskList">
+                    </div>
 
                     <div class="mb-3">
                         <button type="button" class="btn btn-sm btn-light" id="addTask">
