--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,12 +10,12 @@
                 </div>
                 <div class="mb-4">
                     <h5 class="mb-1">Login and get organized</h5>
-                    <p class="text-muted small mb-0">Use your internet passport to login</p>
+                    <p class="text-muted small mb-0">Use your <strong>Internet Passport</strong> to login</p>
                 </div>
 
                 <div class="text-center">
                     <a href="/login/auth/internetpassport" class="btn btn-block btn-full">
-                        Internet Passport
+                        Login
                     </a>
                 </div>
             </div>
